[package]
name = "amimono-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ammn"

[dependencies]
cargo = "0.92.0"
clap = "4.5.51"
colored = "3.0.0"
flate2 = "1.1.5"
fnv = "1.0.7"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
toml = "0.9.8"
