[package]
name = "amimono-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
amimono = { path = "../amimono" }
axum = "0.8.6"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
