[package]
name = "amimono"
version = "0.1.0"
edition = "2024"

[dependencies]
amimono-schemas = { path = "../amimono-schemas" }
axum = "0.8.6"
clap = "4.5.51"
futures = "0.3.31"
kube = "2.0.1"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
log = "0.4.28"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
